Fixed_SpeedButton_Bug